library/src/libqvalidator.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QDoubleValidator QDoubleValidator;
typedef struct QIntValidator QIntValidator;
typedef struct QLocale QLocale;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
typedef struct QValidator QValidator;
typedef QDoubleValidator::Notation Notation; // C++ enum
typedef int Notation; // C ABI enum
QTLIBC_API void QValidator_SetLocale(QValidator* self, QLocale* locale);
QTLIBC_API QLocale* QValidator_Locale(const QValidator* self);
QTLIBC_API QIntValidator* QIntValidator_new();
QTLIBC_API QIntValidator* QIntValidator_new2(int bottom, int top);
QTLIBC_API QIntValidator* QIntValidator_new3(QObject* parent);
QTLIBC_API QIntValidator* QIntValidator_new4(int bottom, int top, QObject* parent);
QTLIBC_API QMetaObject* QIntValidator_MetaObject(const QIntValidator* self);
QTLIBC_API void* QIntValidator_Metacast(QIntValidator* self, const char* param1);
QTLIBC_API int QIntValidator_Metacall(QIntValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QIntValidator_Tr(const char* s);
QTLIBC_API int QIntValidator_Validate(const QIntValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QIntValidator_Fixup(const QIntValidator* self, libqt_string input);
QTLIBC_API void QIntValidator_SetBottom(QIntValidator* self, int bottom);
QTLIBC_API void QIntValidator_SetTop(QIntValidator* self, int top);
QTLIBC_API void QIntValidator_SetRange(QIntValidator* self, int bottom, int top);
QTLIBC_API int QIntValidator_Bottom(const QIntValidator* self);
QTLIBC_API int QIntValidator_Top(const QIntValidator* self);
void QIntValidator_Connect_BottomChanged(QIntValidator* self, intptr_t slot);
void QIntValidator_Connect_TopChanged(QIntValidator* self, intptr_t slot);
QTLIBC_API libqt_string QIntValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QIntValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QIntValidator_Delete(QIntValidator* self);
QTLIBC_API QDoubleValidator* QDoubleValidator_new();
QTLIBC_API QMetaObject* QDoubleValidator_MetaObject(const QDoubleValidator* self);
QTLIBC_API void* QDoubleValidator_Metacast(QDoubleValidator* self, const char* param1);
QTLIBC_API int QDoubleValidator_Metacall(QDoubleValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QDoubleValidator_Tr(const char* s);
QTLIBC_API int QDoubleValidator_Validate(const QDoubleValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QDoubleValidator_Fixup(const QDoubleValidator* self, libqt_string input);
QTLIBC_API void QDoubleValidator_SetRange(QDoubleValidator* self, double bottom, double top, int decimals);
QTLIBC_API void QDoubleValidator_SetRange2(QDoubleValidator* self, double bottom, double top);
QTLIBC_API void QDoubleValidator_SetBottom(QDoubleValidator* self, double bottom);
QTLIBC_API void QDoubleValidator_SetTop(QDoubleValidator* self, double top);
QTLIBC_API void QDoubleValidator_SetDecimals(QDoubleValidator* self, int decimals);
QTLIBC_API void QDoubleValidator_SetNotation(QDoubleValidator* self, int notation);
QTLIBC_API double QDoubleValidator_Bottom(const QDoubleValidator* self);
QTLIBC_API double QDoubleValidator_Top(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Decimals(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Notation(const QDoubleValidator* self);
QTLIBC_API libqt_string QDoubleValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QDoubleValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QDoubleValidator_Delete(QDoubleValidator* self);