src/qt/libqvalidator.bf

	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QIntValidator_new")]
	public static extern void* QIntValidator_new();
	[LinkName("QIntValidator_new2")]
	public static extern void* QIntValidator_new2(int32 bottom, int32 top);
	[LinkName("QIntValidator_new3")]
	public static extern void* QIntValidator_new3(void* parent);
	[LinkName("QIntValidator_new4")]
	public static extern void* QIntValidator_new4(int32 bottom, int32 top, void* parent);
	[LinkName("QIntValidator_MetaObject")]
	public static extern void* QIntValidator_MetaObject(void* c_this);
	[LinkName("QIntValidator_Metacast")]
	public static extern void* QIntValidator_Metacast(void* c_this, char8[] param1);
	[LinkName("QIntValidator_Metacall")]
	public static extern int32 QIntValidator_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QIntValidator_Tr")]
	public static extern libqt_string QIntValidator_Tr(char8[] s);
	[LinkName("QIntValidator_Validate")]
	public static extern int64 QIntValidator_Validate(void* c_this, libqt_string param1, int32* param2);
	[LinkName("QIntValidator_Fixup")]
	public static extern void QIntValidator_Fixup(void* c_this, libqt_string input);
	[LinkName("QIntValidator_SetBottom")]
	public static extern void QIntValidator_SetBottom(void* c_this, int32 bottom);
	[LinkName("QIntValidator_SetTop")]
	public static extern void QIntValidator_SetTop(void* c_this, int32 top);
	[LinkName("QIntValidator_SetRange")]
	public static extern void QIntValidator_SetRange(void* c_this, int32 bottom, int32 top);
	[LinkName("QIntValidator_Bottom")]
	public static extern int32 QIntValidator_Bottom(void* c_this);
	[LinkName("QIntValidator_Top")]
	public static extern int32 QIntValidator_Top(void* c_this);
	[LinkName("QIntValidator_Connect_BottomChanged")]
	public static extern void QIntValidator_Connect_BottomChanged(void* c_this, c_intptr slot);
	[LinkName("QIntValidator_Connect_TopChanged")]
	public static extern void QIntValidator_Connect_TopChanged(void* c_this, c_intptr slot);
	[LinkName("QIntValidator_Tr2")]
	public static extern libqt_string QIntValidator_Tr2(char8[] s, char8[] c);
	[LinkName("QIntValidator_Tr3")]
	public static extern libqt_string QIntValidator_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QIntValidator_Delete")]
	public static extern void QIntValidator_Delete(void* self);
}
public class QDoubleValidator
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QDoubleValidator_new();
	}
	
	public ~this()
	{
		CQt.QDoubleValidator_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QDoubleValidator_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8[] param1)
	{
		return CQt.QDoubleValidator_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QDoubleValidator_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8[] s)
	{
		return CQt.QDoubleValidator_Tr(s);
	}
	
	public virtual int64 Validate(libqt_string param1, int32* param2)
	{
		return CQt.QDoubleValidator_Validate(this.nativePtr, param1, param2);
	}
	
	public virtual void Fixup(libqt_string input)
	{
		CQt.QDoubleValidator_Fixup(this.nativePtr, input);
	}
	
	public void SetRange(double bottom, double top, int32 decimals)
	{
		CQt.QDoubleValidator_SetRange(this.nativePtr, bottom, top, decimals);
	}
	
	public void SetRange2(double bottom, double top)
	{
		CQt.QDoubleValidator_SetRange2(this.nativePtr, bottom, top);
	}
	
	public void SetBottom(double bottom)
	{
		CQt.QDoubleValidator_SetBottom(this.nativePtr, bottom);
	}
	
	public void SetTop(double top)
	{
		CQt.QDoubleValidator_SetTop(this.nativePtr, top);
	}
	
	public void SetDecimals(int32 decimals)
	{
		CQt.QDoubleValidator_SetDecimals(this.nativePtr, decimals);
	}
	
	public void SetNotation(int64 notation)
	{
		CQt.QDoubleValidator_SetNotation(this.nativePtr, notation);
	}
	
	public double Bottom()
	{
		return CQt.QDoubleValidator_Bottom(this.nativePtr);
	}
	
	public double Top()
	{
		return CQt.QDoubleValidator_Top(this.nativePtr);
	}
	
	public int32 Decimals()
	{
		return CQt.QDoubleValidator_Decimals(this.nativePtr);
	}
	
	public int64 Notation()
	{
		return CQt.QDoubleValidator_Notation(this.nativePtr);
	}
	
	public static libqt_string Tr2(char8[] s, char8[] c)
	{
		return CQt.QDoubleValidator_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8[] s, char8[] c, int32 n)
	{
		return CQt.QDoubleValidator_Tr3(s, c, n);
	}
	
	public void SetLocale(void* locale)
	{
		CQt.QValidator_SetLocale(this.nativePtr, locale);
	}
	
	public void Locale()
	{
		CQt.QValidator_Locale(this.nativePtr);
	}
	
	public virtual bool Event(void* event)
	{
		return CQt.QObject_Event(this.nativePtr, event);
	}
	
	public virtual bool EventFilter(void* watched, void* event)
	{
		return CQt.QObject_EventFilter(this.nativePtr, watched, event);
	}
	
	public libqt_string ObjectName()
	{
		return CQt.QObject_ObjectName(this.nativePtr);
	}
	
	public void SetObjectName(void name)
	{
		CQt.QObject_SetObjectName(this.nativePtr, name);
	}
	
	public bool IsWidgetType()
	{
		return CQt.QObject_IsWidgetType(this.nativePtr);
	}
	
	public bool IsWindowType()
	{
		return CQt.QObject_IsWindowType(this.nativePtr);
	}
	
	public bool IsQuickItemType()
	{
		return CQt.QObject_IsQuickItemType(this.nativePtr);
	}
	
	public bool SignalsBlocked()
	{
		return CQt.QObject_SignalsBlocked(this.nativePtr);
	}
	
	public bool BlockSignals(bool b)
	{
		return CQt.QObject_BlockSignals(this.nativePtr, b);
	}
	
	public void* Thread()
	{
		return CQt.QObject_Thread(this.nativePtr);
	}
	
	public void MoveToThread(void* thread)
	{
		CQt.QObject_MoveToThread(this.nativePtr, thread);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return CQt.QObject_StartTimer(this.nativePtr, interval);
	}
	
	public void KillTimer(int32 id)
	{
		CQt.QObject_KillTimer(this.nativePtr, id);
	}
	
	public void*[] Children()
	{
		return CQt.QObject_Children(this.nativePtr);
	}
	
	public void SetParent(void* parent)
	{
		CQt.QObject_SetParent(this.nativePtr, parent);
	}
	
	public void InstallEventFilter(void* filterObj)
	{
		CQt.QObject_InstallEventFilter(this.nativePtr, filterObj);
	}
	
	public void RemoveEventFilter(void* obj)
	{
		CQt.QObject_RemoveEventFilter(this.nativePtr, obj);
	}
	
	public static QMetaObject__Connection Connect(void* sender, void* signal, void* receiver, void* method)
	{
		return CQt.QObject_Connect(sender, signal, receiver, method);
	}
	
	public QMetaObject__Connection Connect2(void* sender, char8[] signal, char8[] member)
	{
		return CQt.QObject_Connect2(this.nativePtr, sender, signal, member);
	}
	
	public static bool Disconnect(void* sender, void* signal, void* receiver, void* member)
	{
		return CQt.QObject_Disconnect(sender, signal, receiver, member);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__Connection* param1)
	{
		return CQt.QObject_DisconnectWithQMetaObjectConnection(param1);
	}
	
	public void DumpObjectTree()
	{
		CQt.QObject_DumpObjectTree(this.nativePtr);
	}
	
	public void DumpObjectInfo()
	{
		CQt.QObject_DumpObjectInfo(this.nativePtr);
	}
	
	public bool SetProperty(char8[] name, void* value)
	{
		return CQt.QObject_SetProperty(this.nativePtr, name, value);
	}
	
	public void Property(char8[] name)
	{
		CQt.QObject_Property(this.nativePtr, name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return CQt.QObject_DynamicPropertyNames(this.nativePtr);
	}
	
	public void* BindingStorage()
	{
		return CQt.QObject_BindingStorage(this.nativePtr);
	}
	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public void* Parent()
	{
		return CQt.QObject_Parent(this.nativePtr);
	}
	
	public bool Inherits(char8[] classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
